fixed ticket description word wrap

--- a/src/app/components/tickets/ticket-detail/ticket-detail.component.scss
+++ b/src/app/components/tickets/ticket-detail/ticket-detail.component.scss
@@ -1,5 +1,6 @@
 .description {
   width: 90%;
+  max-width: 90vw;
   white-space: normal;
   word-wrap: break-word;
 }
